Release Secure Trade 1.2.1 maintenance fixes